Fix tooltip z-index

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -203,7 +203,6 @@
     padding-right: 10px;
     background: #fff;
     .transition(all .4s ease-in-out);
-    z-index: 1;
 
     .icon-bookmark, .icon-soundoff {
       padding-right: 5px;
